wrapped up, need to fix ind comment delete button at some point

--- a/public/index.css
+++ b/public/index.css
@@ -104,9 +104,6 @@ p{
     color: white;
     border: none;
 }
-#upvote:active, #downvote:active{
-    transform: scale(.98);
-}
 
 #upvote{
     background-color: forestgreen;
@@ -114,6 +111,14 @@ p{
 
 #downvote{
     background-color: rgb(185, 15, 15);
+}
+#downvote:active{
+    transform: scale(.98);
+    background-color: rgba(185, 15, 15, 0.63);
+}
+#upvote:active{
+    transform: scale(.98);
+    background-color: rgba(34, 139, 34, 0.611);
 }
 
 #upvote:hover, #downvote:hover{
@@ -153,6 +158,8 @@ cursor: pointer;
 
 #input{
     width: 60%;
+    border: none;
+    box-shadow: 1px 1px 3px rgba(128, 128, 128, 0.687);
 }
 
 #comment{
@@ -189,6 +196,7 @@ cursor: pointer;
 
 #commentDelete:active{
     transform: scale(.98);
+    background-color: rgba(185, 15, 15, 0.367);
 }
 
 #subBtn{
@@ -206,6 +214,7 @@ cursor: pointer;
 
 #subBtn:active{
     transform: scale(.98);
+    background-color: rgba(34, 139, 34, 0.366);
 }
 
 .list-group-flush{
